--- a/concerts/index.html
+++ b/concerts/index.html
@@ -10,7 +10,7 @@ headerImage: header-vipa-ensemble.jpg
   <div class="row mb-5">
     <div class="col-12 col-md-5">
       {%- if concert.thumbnail -%}
-        <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/concert-thumbnails/{{ concert.thumbnail }}" alt=""></a>
+        <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/repertoire-images/{{ concert.thumbnail }}" alt=""></a>
       {% else %}
         <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/repertoire-images/switch_misc_1000x500px.jpg" alt=""></a>
       {%- endif -%}
