--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 		</div>
 	</div>
 </section>
-<section class="module-header module-gray p-t-100 p-b-100">
+<!-- <section class="module-header module-gray p-t-100 p-b-100">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -33,5 +33,5 @@ layout: default
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <!-- Page Header end-->
