--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@ layout: default
 			<div class="col-md-12">
 				<h1 class="h1" style="font-family:optima;">[Switch~ Ensemble]</h1>
 				<p class="m-b-30">A new music ensemble for the 21st century</p>
-				</p>
+				<div class="d-flex justify-content-center mb-5">
+				  <a class="btn btn-lg btn-round btn-success" href="https://fundly.com/the-switch-ensemble-2020-21-season" role="button">Support [Switch~]'s 2020-21 Season Campaign</a>
+				</div>
 			</div>
 		</div>
 	</div>
