--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ layout: default
 				<h1 class="h1" style="font-family:optima;">[Switch~ Ensemble]</h1>
 				<p class="m-b-30">A new music ensemble for the 21st century</p>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/HAKg48iBW88"; frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<a href="https://www.eventbrite.com/e/switch-ensemble-plays-ut-austin-tickets-137177045235" target="_blank"><img src="www.switchensemble.com/concerts/Switch-UT-Tele-Poster.png"></a>
+				<a href="https://www.eventbrite.com/e/switch-ensemble-plays-ut-austin-tickets-137177045235" target="_blank"><img src="concerts/Switch-UT-Tele-Poster.png"></a>
+
 				<div class="d-flex justify-content-center mb-5">
 				  <a class="btn btn-lg btn-round btn-success" href="https://fundly.com/the-switch-ensemble-2020-21-season" role="button">Support [Switch~]'s 2020-21 Season Campaign</a>
 				</div>
