changed to mx-7 mx-5

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ layout: default
 			<div class="col-md-12">
 				<h1 class="h1" style="font-family:optima;">[Switch~ Ensemble]</h1>
 				<p class="m-b-30">A new music ensemble for the 21st century</p>
-			<div class="d-flex justify-content-center mb-7">
+			<div class="d-flex justify-content-center mx-7">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/HAKg48iBW88"; frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-				<div class="d-flex justify-content-center mb-5">
+				<div class="d-flex justify-content-center mx-5">
 				<a href="https://www.eventbrite.com/e/switch-ensemble-plays-ut-austin-tickets-137177045235" target="_blank"><img src="concerts/Switch-UT-Tele-Poster@0.5x.png" height="400"></a>
 	</div>
 				<div class="d-flex justify-content-center mb-5">
