--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ layout: default
 			<div class="col-md-12">
 				<h1 class="h1" style="font-family:optima;">[Switch~ Ensemble]</h1>
 				<p class="m-b-30">A new music ensemble for the 21st century</p>
-			<div class="d-flex justify-content-center mx-6">
+	<!--		<div class="d-flex justify-content-center mx-6">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/HAKg48iBW88"; frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-				<div class="d-flex justify-content-center mx-3">
+</div> -->
+		<!--		<div class="d-flex justify-content-center mx-3">
 				<a href="https://www.eventbrite.com/e/switch-ensemble-plays-ut-austin-tickets-137177045235" target="_blank"><img src="concerts/Switch-UT-Tele-Poster@0.5x.png" height="400"></a>
-	</div>
+	</div> -->
 				<div class="d-flex justify-content-center mb-5">
 				  <a class="btn btn-lg btn-round btn-success" href="https://fundly.com/the-switch-ensemble-2020-21-season" role="button">Support [Switch~]'s 2020-21 Season Campaign</a>
 				</div>
