--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ layout: default
 				<a href="https://www.eventbrite.com/e/switch-ensemble-plays-ut-austin-tickets-137177045235" target="_blank"><img src="concerts/Switch-UT-Tele-Poster@0.5x.png" height="400"></a>
 	</div> -->
 				<div class="d-flex justify-content-center mb-5">
-				  <a class="btn btn-lg btn-round btn-success" href="https://fundly.com/the-switch-ensemble-2020-21-season" role="button">Support [Switch~]'s 2020-21 Season Campaign</a>
+				  <a class="btn btn-lg btn-round btn-success" href="https://www.eventbrite.com/e/switch-presents-singing-through-a-wire-tickets-141072709271
+
+" role="button">RSVP to [Switch~]'s broadcast on 3/5/21</a>
 				</div>
 			</div>
 		</div>
