--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ layout: default
 		<!--		<div class="d-flex justify-content-center mx-3">
 				<a href="https://www.eventbrite.com/e/switch-ensemble-plays-ut-austin-tickets-137177045235" target="_blank"><img src="concerts/Switch-UT-Tele-Poster@0.5x.png" height="400"></a>
 	</div> -->
-				<div class="d-flex justify-content-center mb-5">
+				<!-- <div class="d-flex justify-content-center mb-5">
 				  <a class="btn btn-lg btn-round btn-success" href="https://www.eventbrite.com/e/switch-presents-singing-through-a-wire-tickets-141072709271" role="button">RSVP to [Switch~]'s broadcast on 3/5/21</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
