--- a/media/index.html
+++ b/media/index.html
@@ -10,7 +10,7 @@ moduleSize: small
 
 {%- for piece in sortedRep -%}
 
-  {%- if piece.composer.last contains 'Papalexandri-Alexandri' or piece.composer.last contains 'Pateras' or piece.composer.last contains 'Whillock' or piece.composer.last contains 'Watkins' or piece.composer.last contains 'Zúñiga' or piece.composer.last contains 'Cheah' or piece.composer.last contains 'Eldar' or piece.composer.last contains 'Walton' or piece.composer.last contains 'Chandler' or piece.composer.last contains 'Järnegard' or piece.composer.last contains 'McCormack' or piece.composer.last contains 'Diels' or piece.composer.last contains 'Silva' or piece.composer.last contains 'Cote' or piece.composer.last contains 'Thorpe Buchanan' -%}
+  {%- if piece.composer.last contains 'Papalexandri-Alexandri' or piece.composer.last contains 'Pateras' or piece.composer.last contains 'Whillock' or piece.composer.last contains 'Watkins' or piece.composer.last contains 'Zúñiga' or piece.composer.last contains 'Cheah' or piece.composer.last contains 'Eldar' or piece.composer.last contains 'Walton' or piece.composer.last contains 'Järnegard' or piece.composer.last contains 'McCormack' or piece.composer.last contains 'Diels' or piece.composer.last contains 'Silva' or piece.composer.last contains 'Cote' -%}
 
     {%- for item in piece.media -%}
       {%- unless item.url == nil -%}
