--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 layout: default
 ---
 <!-- Page Header-->
-<section class="module-header full-height parallax bg-dark bg-dark-60" data-background="assets/images/switch-home.jpg">
+
+<section class="module-header full-height parallax bg-dark bg-dark-60 bgimg" data-background="assets/images/switch-home.jpg">
+
+
+
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
