scrapped image rotation, change bg image

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@ layout: default
 ---
 <!-- Page Header-->
 
-<section class="module-header full-height parallax bg-dark bg-dark-60 bgimg" data-background="assets/images/switch-home.jpg">
+<section class="module-header full-height parallax bg-dark bg-dark-60 bgimg" data-background="assets/images/walton-crossing_bg.jpg">
 
+<!-- alternative bg images
+assets/images/switch-home.jpg
+assets/images/sheehan-the-bends_bg.jpg
+-->
 
 
 	<div class="container">
