changed concerts header

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Concerts
-headerImage: header-vipa-ensemble.jpg
+headerImage: headers/switch-ps21-concert-header_2200.jpg
 ---
 
 {% assign performancePosts = site.posts | where_exp:"item", "item.categories contains 'performance'" %}
