--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@ assets/images/sheehan-the-bends_bg.jpg
 	<!--		<div class="d-flex justify-content-center mx-6">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/HAKg48iBW88"; frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div> -->
+
+<br>
+	<div class="container full-width">
+
+<!-- GRIDS preview BEGIN --><div class="row full-width" width="100%" height="50vh">
+	<div class="col-12 nopadding" valign="top" align="center" width="99%" height="55vh"><iframe class="embed-responsive-item" width="99%" height="55vh" src="" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview"></iframe></div>
+	<br>
+	<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></div><br></center>
+
+</div><!--  GRIDS preview END -->
+
+
+
+
 		<!--		<div class="d-flex justify-content-center mx-3">
 				<a href="https://www.eventbrite.com/e/switch-ensemble-plays-ut-austin-tickets-137177045235" target="_blank"><img src="concerts/Switch-UT-Tele-Poster@0.5x.png" height="400"></a>
 	</div> -->
