score-vid-header css

--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@ assets/images/sheehan-the-bends_bg.jpg
 	<!--		<div class="d-flex justify-content-center mx-6">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/HAKg48iBW88"; frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div> -->
-</div></div></section>
-
-<section class="score-vid-header module-bg-dark" background-color="#051f4a">
-	<div class="container full-width">
-
-
+</div></div></div></section>
+<br>
+<section class="container score-vid-header bg-dark bg-dark-60" background-color="#051f4a">
 <br>
 	<div class="container full-width">
 
