--- a/index.html
+++ b/index.html
@@ -22,21 +22,26 @@ assets/images/sheehan-the-bends_bg.jpg
 </div></div></div></section>
 <br>
 <section class="container score-vid-header bg-dark bg-dark-60" background-color="#051f4a">
+	<div class="row">
+		<!-- Content-->
+		<div class="col-lg-12 m-auto">
+		{%- for post in blogPosts -%}
+			  <!-- Post-->
 <br>
 	<div class="container full-width">
 
 <!-- GRIDS preview BEGIN --><div class="row full-width" width="100%" height="50vh">
-	<div class="col-12 nopadding" valign="top" align="center" width="99%" height="55vh"><iframe class="embed-responsive-item" width="99%" height="55vh" src="" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview"></iframe><script src="https://player.vimeo.com/api/player.js"></script></div>
+	<div class="d-flex justify-content-center mx-3" valign="top" align="center" width="99%" height="55vh"><iframe class="embed-responsive-item" width="99%" height="55vh" src="" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview"></iframe><script src="https://player.vimeo.com/api/player.js"></script></div>
 	<br>
 	<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></div><br></center>
 
 </div><!--  GRIDS preview END -->
 
+</div></div></div>
 
 
 
-
-		<!--		<div class="d-flex justify-content-center mx-3">
+		<!--		
 				<a href="https://www.eventbrite.com/e/switch-ensemble-plays-ut-austin-tickets-137177045235" target="_blank"><img src="concerts/Switch-UT-Tele-Poster@0.5x.png" height="400"></a>
 	</div> -->
 				<!-- <div class="d-flex justify-content-center mb-5">
