--- a/index.html
+++ b/index.html
@@ -19,25 +19,22 @@ assets/images/sheehan-the-bends_bg.jpg
 	<!--		<div class="d-flex justify-content-center mx-6">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/HAKg48iBW88"; frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div> -->
-</div></div></div></section>
+			</div>
+		</div>
+	</div>
+</section>
 <br>
 <section class="container score-vid-header bg-dark bg-dark-60" background-color="#051f4a">
 	<div class="row">
 		<!-- Content-->
 		<div class="col-lg-12 m-auto">
-		{%- for post in blogPosts -%}
-			  <!-- Post-->
 <br>
-	<div class="container full-width">
-
 <!-- GRIDS preview BEGIN --><div class="row full-width" width="100%" height="50vh">
-	<div class="d-flex justify-content-center mx-3" valign="top" align="center" width="99%" height="55vh"><iframe class="embed-responsive-item" width="99%" height="55vh" src="" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview"></iframe><script src="https://player.vimeo.com/api/player.js"></script></div>
-	<br>
-	<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></div><br></center>
+			<div class="d-flex justify-content-center mx-3" valign="top" align="center" width="99%" height="55vh"><iframe class="embed-responsive-item" width="99%" height="55vh" src="" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview"></iframe><script src="https://player.vimeo.com/api/player.js"></script></div>
+			<br>
+			<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></div><br></center>
+<!--  GRIDS preview END -->
 
-</div><!--  GRIDS preview END -->
-
-</div></div></div>
 
 
 
@@ -47,7 +44,6 @@ assets/images/sheehan-the-bends_bg.jpg
 				<!-- <div class="d-flex justify-content-center mb-5">
 				  <a class="btn btn-lg btn-round btn-success" href="https://www.eventbrite.com/e/switch-presents-singing-through-a-wire-tickets-141072709271" role="button">RSVP to [Switch~]'s broadcast on 3/5/21</a>
 				</div> -->
-			</div>
 		</div>
 	</div>
 </section>
