--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ assets/images/sheehan-the-bends_bg.jpg
 	</div>
 </section>
 <br>
-<section class="container score-vid-header bg-dark bg-dark-60" background-color="#051f4a">
-	<div class="row">
+<section class="container score-vid-header">
+	<div class="row m-auto">
 		<!-- Content-->
-		<div class="col-lg-12 m-auto">
+	
 <br>
 <!-- GRIDS preview BEGIN --><div class="row full-width" width="100%" height="50vh">
-			<div class="d-flex justify-content-center mx-3" valign="top" align="center" width="99%" height="55vh"><iframe class="embed-responsive-item" width="99%" height="55vh" src="" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview"></iframe><script src="https://player.vimeo.com/api/player.js"></script></div>
+			<div class="col-md-12 justify-content-center mx-3" valign="top" align="center" width="99%" height="600"><iframe class="embed-responsive-item" width="99%" height="600" src="" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview"></iframe><script src="https://player.vimeo.com/api/player.js"></script></div>
 			<br>
 			<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></div><br></center>
 <!--  GRIDS preview END -->
