--- a/index.html
+++ b/index.html
@@ -20,24 +20,6 @@ assets/images/sheehan-the-bends_bg.jpg
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/HAKg48iBW88"; frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div> -->
 			</div>
-		</div>
-	</div>
-</section>
-<br>
-<section class="container score-vid-header">
-	<div class="row m-auto">
-		<!-- Content-->
-	
-<br>
-<!-- GRIDS preview BEGIN --><div class="row full-width" width="100%" height="50vh">
-			<div class="col-md-12 justify-content-center mx-3" valign="top" align="center" width="99%" height="600"><iframe class="embed-responsive-item" width="99%" height="600" src="" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview"></iframe><script src="https://player.vimeo.com/api/player.js"></script></div>
-			<br>
-			<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></div><br></center>
-<!--  GRIDS preview END -->
-
-
-
-
 		<!--		
 				<a href="https://www.eventbrite.com/e/switch-ensemble-plays-ut-austin-tickets-137177045235" target="_blank"><img src="concerts/Switch-UT-Tele-Poster@0.5x.png" height="400"></a>
 	</div> -->
@@ -47,11 +29,14 @@ assets/images/sheehan-the-bends_bg.jpg
 		</div>
 	</div>
 </section>
-<!-- <section class="module-header module-gray p-t-100 p-b-100">
+<section class="module-header module-gray p-t-100 p-b-100">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<h1 class="h3 m-b-20">Support New Music</h1>
+
+
+				
+			<!--	<h1 class="h3 m-b-20">Support New Music</h1>
 				<p class="m-b-40">Please consider making a donation to support our 2017-18 concert season!</p>
 				<div class="d-flex justify-content-center">
 					<div class="d-flex mb-5">
@@ -59,11 +44,18 @@ assets/images/sheehan-the-bends_bg.jpg
 					</div>
 					<div class="d-flex mb-5">
 					  <a class="btn btn-lg btn-round btn-primary" href="https://www.fracturedatlas.org/site/fiscal/profile?id=14815" role="button">Donate</a>
-					</div>
-				</div>
-				<div class="d-flex justify-content-center mb-5">
-				  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/Sc6gn-AZd3E" frameborder="0" allowfullscreen></iframe>
-				</div>
+					</div> 
+				</div> -->
+				
+<!-- GRIDS preview BEGIN -->
+	<div class="d-flex justify-content-center mb-5">			
+				<iframe class="embed-responsive-item" width="99%" height="600" src="" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview"></iframe><script src="https://player.vimeo.com/api/player.js"></script>
+	</div>		<br>
+			<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></div><br></center>
+<!--  GRIDS preview END -->
+
+			<!--	  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/Sc6gn-AZd3E" frameborder="0" allowfullscreen></iframe>
+				</div>-->
 			</div>
 		</div>
 	</div>
