tried src in addition to data-src

--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@ assets/images/sheehan-the-bends_bg.jpg
 				
 <!-- GRIDS preview BEGIN -->
 	<div class="d-flex justify-content-center mb-5">			
-				<iframe class="embed-responsive-item" width="99%" height="600" src="" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview"></iframe><script src="https://player.vimeo.com/api/player.js"></script>
-	</div>		<br>
-			<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></div><br></center>
+				<iframe class="embed-responsive-item" width="99%" height="600" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
+				</iframe><script src="https://player.vimeo.com/api/player.js"></script>
+	</div>		
+		<br>
+			<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font>
+			</div><br></center>
 <!--  GRIDS preview END -->
 
 			<!--	  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/Sc6gn-AZd3E" frameborder="0" allowfullscreen></iframe>
@@ -59,5 +62,5 @@ assets/images/sheehan-the-bends_bg.jpg
 			</div>
 		</div>
 	</div>
-</section> -->
+</section> 
 <!-- Page Header end-->
