--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@ assets/images/sheehan-the-bends_bg.jpg
 		</div>
 	</div>
 </section>
-<section class="module-header module-gray p-t-100 p-b-100">
+<section class="module-header module-gray p-t-100 p-b-100 bg-dark bg-dark-60">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-
-
 				
 			<!--	<h1 class="h3 m-b-20">Support New Music</h1>
 				<p class="m-b-40">Please consider making a donation to support our 2017-18 concert season!</p>
@@ -48,13 +46,12 @@ assets/images/sheehan-the-bends_bg.jpg
 				</div> -->
 				
 <!-- GRIDS preview BEGIN -->
-	<div class="d-flex justify-content-center mb-5">			
-				<iframe class="embed-responsive-item" width="99%" height="600" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
+	<div class="justify-content-center mb-5"> <!-- removed "d-flex"-->			
+				<iframe class="embed-responsive-item" width="99%" height="" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
 				</iframe><script src="https://player.vimeo.com/api/player.js"></script>
 	</div>		
-		<br>
 			<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font>
-			</div><br></center>
+			</div>
 <!--  GRIDS preview END -->
 
 			<!--	  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/Sc6gn-AZd3E" frameborder="0" allowfullscreen></iframe>
