--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ assets/images/sheehan-the-bends_bg.jpg
 				
 <!-- GRIDS preview BEGIN -->
 	<div class="justify-content-center mb-5"> <!-- removed "d-flex"-->			
-				<iframe class="embed-responsive-item" width="99%" height="" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
+				<iframe class="embed-responsive-item" width="99%" height="200" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
 				</iframe><script src="https://player.vimeo.com/api/player.js"></script>
 	</div>		
 			<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font>
