removed justify-content-center and mb-12, replaced with col-md-12

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ assets/images/sheehan-the-bends_bg.jpg
 				</div> -->
 				
 <!-- GRIDS preview BEGIN -->
-	<div class="justify-content-center mb-12"> <!-- removed "d-flex"-->			
+	<div class="col-md-12"> <!-- removed "d-flex" and "justify-content-center" and mb-12-->			
 				<iframe class="embed-responsive-item" width="99%" height="200" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
 				</iframe><script src="https://player.vimeo.com/api/player.js"></script>
 	</div>		
