--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ assets/images/sheehan-the-bends_bg.jpg
 	</div>
 </section>
 <section class="module-header module-gray p-t-100 p-b-100 bg-dark bg-dark-60">
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
+	<div class="container" height="2%">
+		<div class="row" height="2%">
+			<div class="col-12" height="2%">
 				
 			<!--	<h1 class="h3 m-b-20">Support New Music</h1>
 				<p class="m-b-40">Please consider making a donation to support our 2017-18 concert season!</p>
@@ -46,8 +46,8 @@ assets/images/sheehan-the-bends_bg.jpg
 				</div> -->
 				
 <!-- GRIDS preview BEGIN -->
-	<div class="col-md-12"> <!-- removed "d-flex" and "justify-content-center" and mb-12-->			
-				<iframe width="99%" height="200" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
+	<div class="col-md-12" height="2%"> <!-- removed "d-flex" and "justify-content-center" and mb-12-->			
+				<iframe width="99%" height="2%" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
 				</iframe><script src="https://player.vimeo.com/api/player.js"></script>
 	</div>		
 			<div class="media-body col-12" align="center"><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font>
