--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ assets/images/sheehan-the-bends_bg.jpg
 				</div> -->
 				
 <!-- GRIDS preview BEGIN -->
-	<div class="col-xl-12" height="100%" padding="0"> <!-- removed "d-flex" and "justify-content-center" and mb-12-->			
+	<div class="col-xl-12" height="100%" padding="0">			
 				<iframe width="99%" height="100%" padding="0" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
 				</iframe><script src="https://player.vimeo.com/api/player.js"></script>
 				<br>
-			<font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font>
+			<center><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></center>
 			</div>
 <!--  GRIDS preview END -->
 
