--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ assets/images/sheehan-the-bends_bg.jpg
 		</div>
 	</div>
 </section>
-<section class="module-gray bg-dark bg-dark-60" padding="0">
-	<div class="container" padding="0">
-		<div class="row" padding="0">
-			<div class="col-12" height="100%" padding="0">
+<section class="module-gray module-bg-dark" padding="0" background-color="#051f4a">
+	<div class="container full-width nopadding" padding="0">
+		<div class="row nopadding full-width" padding="0">
+			<div class="col-12" height="100%" padding="0" height="40vh">
 				
 			<!--	<h1 class="h3 m-b-20">Support New Music</h1>
 				<p class="m-b-40">Please consider making a donation to support our 2017-18 concert season!</p>
@@ -46,8 +46,8 @@ assets/images/sheehan-the-bends_bg.jpg
 				</div> -->
 				
 <!-- GRIDS preview BEGIN -->
-	<div class="col-xl-12" height="100%" padding="0">			
-				<iframe width="99%" height="100%" padding="0" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
+	<div class="col-xl-12 nopadding" height="40vh" padding="0">			
+				<iframe width="100%" height="40vh" padding="0" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
 				</iframe><script src="https://player.vimeo.com/api/player.js"></script>
 				<br>
 			<center><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></center>
