--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ assets/images/sheehan-the-bends_bg.jpg
 				
 <!-- GRIDS preview BEGIN -->
 	<div class="col-xl-12 nopadding" height="50vh" padding="0">			
-				<iframe width="100%" height="50vh" padding="0" src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1&quality=1080p" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
+				<iframe width="100%" height="50vh" padding="0" src="https://player.vimeo.com/video/1062194798?h=aaaf18360b&amp;autoplay=1&amp;loop=1&amp;badge=0&amp;portrait=0&amp;byline=0&amp;controls=0&amp;autopause=1&amp;muted=1&amp;quality=1080p" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
 				</iframe><script src="https://player.vimeo.com/api/player.js"></script>
 				<br>
 			<center><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></center>
