--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ assets/images/sheehan-the-bends_bg.jpg
 		</div>
 	</div>
 </section>
-<section class="module-gray bg-dark" padding="0" background-color="#152f4a">
-	<div class="container full-width nopadding" padding="0">
+<section class="module-black bg-dark" padding="5" background-color="#031a2a">
+	<div class="container full-width nopadding" padding="5">
 		<div class="row nopadding full-width" padding="0">
 			<div class="col-12" height="100%" padding="0" height="50vh">
 				
@@ -46,11 +46,12 @@ assets/images/sheehan-the-bends_bg.jpg
 				</div> -->
 				
 <!-- GRIDS preview BEGIN -->
-	<div class="col-xl-12 nopadding" height="50vh" padding="0">			
-				<iframe width="100%" height="50vh" padding="0" src="https://player.vimeo.com/video/1062194798?h=aaaf18360b&amp;autoplay=1&amp;loop=1&amp;badge=0&amp;portrait=0&amp;byline=0&amp;controls=0&amp;autopause=1&amp;muted=1&amp;quality=1080p" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
+	<div class="col-xl-12 nopadding" height="55vh" padding="0">			
+				<iframe width="100%" height="55vh" padding="0" src="https://player.vimeo.com/video/1062194798?h=aaaf18360b&amp;autoplay=1&amp;loop=1&amp;badge=0&amp;portrait=0&amp;byline=0&amp;controls=0&amp;autopause=1&amp;muted=1&amp;quality=1080p" data-src="https://player.vimeo.com/video/1062194798?autoplay=1&loop=1&badge=0&portrait=0&byline=0&controls=0&autopause=1&muted=1" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen allow=autoplay valign="top" title="GRIDS preview">				
 				</iframe><script src="https://player.vimeo.com/api/player.js"></script>
 				<br>
 			<center><font color="fafafa">GRIDS - Experimental Media & Performing Arts Center, Troy, NY, Sep. 12, 2025</font></center>
+			<br><br>
 			</div>
 <!--  GRIDS preview END -->
 
