edited background-color for bg-dark

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ assets/images/sheehan-the-bends_bg.jpg
 		</div>
 	</div>
 </section>
-<section class="module-black" padding="10" background-color="#031a2a">
+<section class="module-black bg-dark" padding="10" background-color="#031a2a">
 	<div class="container full-width nopadding" padding="5">
 		<div class="row nopadding full-width" padding="0">
 			<div class="col-12" height="100%" padding="0" height="50vh">
