created electroacoustic tag and video tag, corresponding filters

--- a/about/repertoire/index.html
+++ b/about/repertoire/index.html
@@ -41,6 +41,11 @@ title: Repertoire
       <li><a href="#" data-filter=".septet">Septet</a></li>
       <li><a href="#" data-filter=".octet">Octet</a></li>
       <li><a href="#" data-filter=".nonet">Nonet</a></li>
+      <br>
+      <li><a href="#" data-filter=".acoustic">Acoustic</a></li>
+      <li><a href="#" data-filter=".electroacoustic">Electroacoustic</a></li>
+      <li><a href="#" data-filter=".video">Video</a></li>
+      <li><a href="#" data-filter=".video">Telematic</a></li>
       {% comment %}
       {%- for tag in tagArray -%}
         <li><a href="#" data-filter=".{{ tag }}">{{ tag | capitalize }}</a></li>
