rep through 2015 up to date

--- a/about/repertoire/index.html
+++ b/about/repertoire/index.html
@@ -45,7 +45,7 @@ title: Repertoire
       <li><a href="#" data-filter=".acoustic">Acoustic</a></li>
       <li><a href="#" data-filter=".electroacoustic">Electroacoustic</a></li>
       <li><a href="#" data-filter=".video">Video</a></li>
-      <li><a href="#" data-filter=".video">Telematic</a></li>
+      <li><a href="#" data-filter=".telematic">Telematic</a></li>
       {% comment %}
       {%- for tag in tagArray -%}
         <li><a href="#" data-filter=".{{ tag }}">{{ tag | capitalize }}</a></li>
